--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 /Dataset1.xlsx
 /Neural Networks and Learning Machines.pdf
 /Pattern Recognition and Machine Learning.pdf
+mnist_data/MNIST/raw/t10k-images-idx3-ubyte
+mnist_data/MNIST/raw/t10k-images-idx3-ubyte.gz
+mnist_data/MNIST/raw/t10k-labels-idx1-ubyte
+mnist_data/MNIST/raw/t10k-labels-idx1-ubyte.gz
+mnist_data/MNIST/raw/train-images-idx3-ubyte
+mnist_data/MNIST/raw/train-images-idx3-ubyte.gz
+mnist_data/MNIST/raw/train-labels-idx1-ubyte
+mnist_data/MNIST/raw/train-labels-idx1-ubyte.gz
